# agent-swarm

./: .gitignore  LICENSE  README.md  pyproject.toml
agent_swarm/: __init__.py  __main__.py  agent.py  app.py  boss.py  bus.py  cli.py  config.py  roles.py  swarm.py
