[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-swarm"
version = "0.1.0"
description = "Multi-agent swarm orchestrator with chat-style TUI — a Boss plans, specialists build."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "agent-swarm contributors" }]
keywords = ["agents", "swarm", "orchestrator", "cli", "tui"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "claude-code-sdk>=0.0.10",
    "rich>=13.0",
    "textual>=0.50.0",
]

[project.optional-dependencies]
dev = ["ruff", "mypy", "pytest", "pytest-asyncio"]

[project.scripts]
agent-swarm = "agent_swarm.cli:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
